fuse.h

	
	struct fuse;
	struct fuse_cmd;
	typedef int (*fuse_fill_dir_t)(void *buf, const char *name,
								   const struct stat *stbuf, off_t off);
	typedef struct fuse_dirhandle *fuse_dirh_t;
	typedef int (*fuse_dirfil_t)(fuse_dirh_t h, const char *name, int type,
								 ino_t ino);
	struct fuse_operations
	{
		int (*getattr)(const char *, struct stat *);
		int (*readlink)(const char *, char *, size_t);
		int (*getdir)(const char *, fuse_dirh_t, fuse_dirfil_t);
		int (*mknod)(const char *, mode_t, dev_t);
		int (*mkdir)(const char *, mode_t);
		int (*unlink)(const char *);
		int (*rmdir)(const char *);
		int (*symlink)(const char *, const char *);
		int (*rename)(const char *, const char *);
		int (*link)(const char *, const char *);
		int (*chmod)(const char *, mode_t);
		int (*chown)(const char *, uid_t, gid_t);
		int (*truncate)(const char *, off_t);
		int (*utime)(const char *, struct utimbuf *);
		int (*open)(const char *, struct fuse_file_info *);
		int (*read)(const char *, char *, size_t, off_t,
					struct fuse_file_info *);
		int (*write)(const char *, const char *, size_t, off_t,
					 struct fuse_file_info *);
		int (*statfs)(const char *, struct statvfs *);
		int (*flush)(const char *, struct fuse_file_info *);
		int (*release)(const char *, struct fuse_file_info *);
		int (*fsync)(const char *, int, struct fuse_file_info *);
		int (*setxattr)(const char *, const char *, const char *, size_t, int);
		int (*getxattr)(const char *, const char *, char *, size_t);
		int (*listxattr)(const char *, char *, size_t);
		int (*removexattr)(const char *, const char *);
		int (*opendir)(const char *, struct fuse_file_info *);
		int (*readdir)(const char *, void *, fuse_fill_dir_t, off_t,
					   struct fuse_file_info *);
		int (*releasedir)(const char *, struct fuse_file_info *);
		int (*fsyncdir)(const char *, int, struct fuse_file_info *);
		void *(*init)(struct fuse_conn_info *conn);
		void (*destroy)(void *);
		int (*access)(const char *, int);
		int (*create)(const char *, mode_t, struct fuse_file_info *);
		int (*ftruncate)(const char *, off_t, struct fuse_file_info *);
		int (*fgetattr)(const char *, struct stat *, struct fuse_file_info *);
		int (*lock)(const char *, struct fuse_file_info *, int cmd,
					struct flock *);
		int (*utimens)(const char *, const struct timespec tv[2]);
		int (*bmap)(const char *, size_t blocksize, uint64_t *idx);
		int (*ioctl)(const char *, int cmd, void *arg,
					 struct fuse_file_info *, unsigned int flags, void *data);
		int (*poll)(const char *, struct fuse_file_info *,
					struct fuse_pollhandle *ph, unsigned *reventsp);
		int (*write_buf)(const char *, struct fuse_bufvec *buf, off_t off,
						 struct fuse_file_info *);
		int (*read_buf)(const char *, struct fuse_bufvec **bufp,
						size_t size, off_t off, struct fuse_file_info *);
		int (*flock)(const char *, struct fuse_file_info *, int op);
		int (*fallocate)(const char *, int, off_t, off_t,
						 struct fuse_file_info *);
	};
#define fuse_main(argc, argv, op, user_data) \
	fuse_main_real(argc, argv, op, sizeof(*(op)), user_data)
	void fuse_exit(struct fuse *f);
	struct fuse_fs;
	int fuse_fs_setxattr(struct fuse_fs *fs, const char *path, const char *name,
						 const char *value, size_t size, int flags);
	int fuse_fs_getxattr(struct fuse_fs *fs, const char *path, const char *name,
						 char *value, size_t size);
	int fuse_fs_listxattr(struct fuse_fs *fs, const char *path, char *list,
						  size_t size);
	int fuse_fs_removexattr(struct fuse_fs *fs, const char *path,
							const char *name);
	int fuse_fs_bmap(struct fuse_fs *fs, const char *path, size_t blocksize,
					 uint64_t *idx);
	int fuse_fs_ioctl(struct fuse_fs *fs, const char *path, int cmd, void *arg,
					  struct fuse_file_info *fi, unsigned int flags, void *data);
	int fuse_fs_poll(struct fuse_fs *fs, const char *path,
					 struct fuse_file_info *fi, struct fuse_pollhandle *ph,
					 unsigned *reventsp);
	int fuse_fs_fallocate(struct fuse_fs *fs, const char *path, int mode,
						  off_t offset, off_t length, struct fuse_file_info *fi);
	void fuse_fs_init(struct fuse_fs *fs, struct fuse_conn_info *conn);
	void fuse_fs_destroy(struct fuse_fs *fs);
	int fuse_notify_poll(struct fuse_pollhandle *ph);
	struct fuse_fs *fuse_fs_new(const struct fuse_operations *op, size_t op_size,
								void *user_data);
	struct fuse_module
	{
		const char *name;
		struct fuse_fs *(*factory)(struct fuse_args *args,
								   struct fuse_fs *fs[]);
		struct fuse_module *next;
		struct fusemod_so *so;
		int ctr;
	};
	void fuse_register_module(struct fuse_module *mod);
#define FUSE_REGISTER_MODULE(name_, factory_)                       \
	static __attribute__((constructor)) void name_##_register(void) \
	{                                                               \
		static struct fuse_module mod =                             \
			{#name_, factory_, NULL, NULL, 0};                      \
		fuse_register_module(&mod);                                 \
	}
	typedef void (*fuse_processor_t)(struct fuse *, struct fuse_cmd *, void *);
	struct fuse *fuse_setup(int argc, char *argv[],
							const struct fuse_operations *op, size_t op_size,
							char **mountpoint, int *multithreaded,
							void *user_data);
	void fuse_teardown(struct fuse *fuse, char *mountpoint);
	struct fuse_cmd *fuse_read_cmd(struct fuse *f);
	void fuse_process_cmd(struct fuse *f, struct fuse_cmd *cmd);
	int fuse_loop_mt_proc(struct fuse *f, fuse_processor_t proc, void *data);
	int fuse_exited(struct fuse *f);
	struct fuse_session *fuse_get_session(struct fuse *f);
#define fuse_main(argc, argv, op) \
	fuse_main_real_compat25(argc, argv, op, sizeof(*(op)))
#define fuse_setup fuse_setup_compat25
#define fuse_teardown fuse_teardown_compat22
#define fuse_operations fuse_operations_compat25
#define fuse_main(argc, argv, op) \
	fuse_main_real_compat22(argc, argv, op, sizeof(*(op)))
#define fuse_setup fuse_setup_compat22
#define fuse_teardown fuse_teardown_compat22
#define fuse_operations fuse_operations_compat22
#define fuse_file_info fuse_file_info_compat
#define fuse_operations fuse_operations_compat2
#define fuse_main fuse_main_compat2
#define fuse_operations fuse_operations_compat1
#define fuse_main fuse_main_compat1