generated_bindings.dart


  int fuse_fs_setxattr(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> name,
    ffi.Pointer<ffi.Int8> value,
    int size,
    int flags,
  ) {
    return (_fuse_fs_setxattr ??=
        _dylib.lookupFunction<_c_fuse_fs_setxattr, _dart_fuse_fs_setxattr>(
            'fuse_fs_setxattr'))(
      fs,
      path,
      name,
      value,
      size,
      flags,
    );
  }

  _dart_fuse_fs_setxattr? _fuse_fs_setxattr;

  int fuse_fs_getxattr(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> name,
    ffi.Pointer<ffi.Int8> value,
    int size,
  ) {
    return (_fuse_fs_getxattr ??=
        _dylib.lookupFunction<_c_fuse_fs_getxattr, _dart_fuse_fs_getxattr>(
            'fuse_fs_getxattr'))(
      fs,
      path,
      name,
      value,
      size,
    );
  }

  _dart_fuse_fs_getxattr? _fuse_fs_getxattr;

  int fuse_fs_listxattr(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> list,
    int size,
  ) {
    return (_fuse_fs_listxattr ??=
        _dylib.lookupFunction<_c_fuse_fs_listxattr, _dart_fuse_fs_listxattr>(
            'fuse_fs_listxattr'))(
      fs,
      path,
      list,
      size,
    );
  }

  _dart_fuse_fs_listxattr? _fuse_fs_listxattr;

  int fuse_fs_removexattr(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return (_fuse_fs_removexattr ??= _dylib.lookupFunction<
        _c_fuse_fs_removexattr,
        _dart_fuse_fs_removexattr>('fuse_fs_removexattr'))(
      fs,
      path,
      name,
    );
  }

  _dart_fuse_fs_removexattr? _fuse_fs_removexattr;

  int fuse_fs_bmap(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int blocksize,
    ffi.Pointer<ffi.Uint64> idx,
  ) {
    return (_fuse_fs_bmap ??= _dylib
        .lookupFunction<_c_fuse_fs_bmap, _dart_fuse_fs_bmap>('fuse_fs_bmap'))(
      fs,
      path,
      blocksize,
      idx,
    );
  }

  _dart_fuse_fs_bmap? _fuse_fs_bmap;

  int fuse_fs_ioctl(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int cmd,
    ffi.Pointer<ffi.Void> arg,
    ffi.Pointer<fuse_file_info> fi,
    int flags,
    ffi.Pointer<ffi.Void> data,
  ) {
    return (_fuse_fs_ioctl ??=
        _dylib.lookupFunction<_c_fuse_fs_ioctl, _dart_fuse_fs_ioctl>(
            'fuse_fs_ioctl'))(
      fs,
      path,
      cmd,
      arg,
      fi,
      flags,
      data,
    );
  }

  _dart_fuse_fs_ioctl? _fuse_fs_ioctl;

  int fuse_fs_poll(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
    ffi.Pointer<fuse_pollhandle> ph,
    ffi.Pointer<ffi.Uint32> reventsp,
  ) {
    return (_fuse_fs_poll ??= _dylib
        .lookupFunction<_c_fuse_fs_poll, _dart_fuse_fs_poll>('fuse_fs_poll'))(
      fs,
      path,
      fi,
      ph,
      reventsp,
    );
  }

  _dart_fuse_fs_poll? _fuse_fs_poll;

  int fuse_fs_fallocate(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int mode,
    int offset,
    int length,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_fallocate ??=
        _dylib.lookupFunction<_c_fuse_fs_fallocate, _dart_fuse_fs_fallocate>(
            'fuse_fs_fallocate'))(
      fs,
      path,
      mode,
      offset,
      length,
      fi,
    );
  }

  _dart_fuse_fs_fallocate? _fuse_fs_fallocate;

  void fuse_fs_init(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<fuse_conn_info> conn,
  ) {
    return (_fuse_fs_init ??= _dylib
        .lookupFunction<_c_fuse_fs_init, _dart_fuse_fs_init>('fuse_fs_init'))(
      fs,
      conn,
    );
  }

  _dart_fuse_fs_init? _fuse_fs_init;

  void fuse_fs_destroy(
    ffi.Pointer<fuse_fs> fs,
  ) {
    return (_fuse_fs_destroy ??=
        _dylib.lookupFunction<_c_fuse_fs_destroy, _dart_fuse_fs_destroy>(
            'fuse_fs_destroy'))(
      fs,
    );
  }

  _dart_fuse_fs_destroy? _fuse_fs_destroy;

  int fuse_notify_poll(
    ffi.Pointer<fuse_pollhandle> ph,
  ) {
    return (_fuse_notify_poll ??=
        _dylib.lookupFunction<_c_fuse_notify_poll, _dart_fuse_notify_poll>(
            'fuse_notify_poll'))(
      ph,
    );
  }

  _dart_fuse_notify_poll? _fuse_notify_poll;

  /// Create a new fuse filesystem object
  ///
  /// This is usually called from the factory of a fuse module to create
  /// a new instance of a filesystem.
  ///
  /// @param op the filesystem operations
  /// @param op_size the size of the fuse_operations structure
  /// @param user_data user data supplied in the context during the init() method
  /// @return a new filesystem object
  ffi.Pointer<fuse_fs> fuse_fs_new(
    ffi.Pointer<fuse_operations> op,
    int op_size,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return (_fuse_fs_new ??= _dylib
        .lookupFunction<_c_fuse_fs_new, _dart_fuse_fs_new>('fuse_fs_new'))(
      op,
      op_size,
      user_data,
    );
  }

  _dart_fuse_fs_new? _fuse_fs_new;

  /// Register a filesystem module
  ///
  /// This function is used by FUSE_REGISTER_MODULE and there's usually
  /// no need to call it directly
  void fuse_register_module(
    ffi.Pointer<fuse_module> mod,
  ) {
    return (_fuse_register_module ??= _dylib.lookupFunction<
        _c_fuse_register_module,
        _dart_fuse_register_module>('fuse_register_module'))(
      mod,
    );
  }

  _dart_fuse_register_module? _fuse_register_module;

  /// This is the part of fuse_main() before the event loop
  ffi.Pointer<fuse> fuse_setup(
    int argc,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> argv,
    ffi.Pointer<fuse_operations> op,
    int op_size,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> mountpoint,
    ffi.Pointer<ffi.Int32> multithreaded,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return (_fuse_setup ??=
        _dylib.lookupFunction<_c_fuse_setup, _dart_fuse_setup>('fuse_setup'))(
      argc,
      argv,
      op,
      op_size,
      mountpoint,
      multithreaded,
      user_data,
    );
  }

  _dart_fuse_setup? _fuse_setup;

  /// This is the part of fuse_main() after the event loop
  void fuse_teardown(
    ffi.Pointer<fuse> fuse,
    ffi.Pointer<ffi.Int8> mountpoint,
  ) {
    return (_fuse_teardown ??=
        _dylib.lookupFunction<_c_fuse_teardown, _dart_fuse_teardown>(
            'fuse_teardown'))(
      fuse,
      mountpoint,
    );
  }

  _dart_fuse_teardown? _fuse_teardown;

  /// Read a single command.  If none are read, return NULL
  ffi.Pointer<fuse_cmd> fuse_read_cmd(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_read_cmd ??=
        _dylib.lookupFunction<_c_fuse_read_cmd, _dart_fuse_read_cmd>(
            'fuse_read_cmd'))(
      f,
    );
  }

  _dart_fuse_read_cmd? _fuse_read_cmd;

  /// Process a single command
  void fuse_process_cmd(
    ffi.Pointer<fuse> f,
    ffi.Pointer<fuse_cmd> cmd,
  ) {
    return (_fuse_process_cmd ??=
        _dylib.lookupFunction<_c_fuse_process_cmd, _dart_fuse_process_cmd>(
            'fuse_process_cmd'))(
      f,
      cmd,
    );
  }

  _dart_fuse_process_cmd? _fuse_process_cmd;

  /// Multi threaded event loop, which calls the custom command
  /// processor function
  int fuse_loop_mt_proc(
    ffi.Pointer<fuse> f,
    ffi.Pointer<ffi.NativeFunction<fuse_processor_t>> proc,
    ffi.Pointer<ffi.Void> data,
  ) {
    return (_fuse_loop_mt_proc ??=
        _dylib.lookupFunction<_c_fuse_loop_mt_proc, _dart_fuse_loop_mt_proc>(
            'fuse_loop_mt_proc'))(
      f,
      proc,
      data,
    );
  }

  _dart_fuse_loop_mt_proc? _fuse_loop_mt_proc;

  /// Return the exited flag, which indicates if fuse_exit() has been
  /// called
  int fuse_exited(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_exited ??= _dylib
        .lookupFunction<_c_fuse_exited, _dart_fuse_exited>('fuse_exited'))(
      f,
    );
  }

  _dart_fuse_exited? _fuse_exited;

  /// Get session from fuse object
  ffi.Pointer<fuse_session> fuse_get_session(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_get_session ??=
        _dylib.lookupFunction<_c_fuse_get_session, _dart_fuse_get_session>(
            'fuse_get_session'))(
      f,
    );
  }

  _dart_fuse_get_session? _fuse_get_session;
}

/// Information about open files
///
/// Changed in version 2.5
class fuse_file_info extends ffi.Struct {}

/// Connection information, passed to the ->init() method
///
/// Some of the elements are read-write, these can be changed to
/// indicate the value requested by the filesystem.  The requested
/// value must usually be smaller than the indicated value.
class fuse_conn_info extends ffi.Struct {
  /// Major version of the protocol (read-only)
  @ffi.Uint32()
  external int proto_major;

  /// Minor version of the protocol (read-only)
  @ffi.Uint32()
  external int proto_minor;

  /// Is asynchronous read supported (read-write)
  @ffi.Uint32()
  external int async_read;

  /// Maximum size of the write buffer
  @ffi.Uint32()
  external int max_write;

  /// Maximum readahead
  @ffi.Uint32()
  external int max_readahead;

  /// Capability flags, that the kernel supports
  @ffi.Uint32()
  external int capable;

  /// Capability flags, that the filesystem wants to enable
  @ffi.Uint32()
  external int want;

  /// Maximum number of backgrounded requests
  @ffi.Uint32()
  external int max_background;

  /// Kernel congestion threshold parameter
  @ffi.Uint32()
  external int congestion_threshold;

  @ffi.Uint32()
  external int _unique_reserved_item_0;
  @ffi.Uint32()
  external int _unique_reserved_item_1;
  @ffi.Uint32()
  external int _unique_reserved_item_2;
  @ffi.Uint32()
  external int _unique_reserved_item_3;
  @ffi.Uint32()
  external int _unique_reserved_item_4;
  @ffi.Uint32()
  external int _unique_reserved_item_5;
  @ffi.Uint32()
  external int _unique_reserved_item_6;
  @ffi.Uint32()
  external int _unique_reserved_item_7;
  @ffi.Uint32()
  external int _unique_reserved_item_8;
  @ffi.Uint32()
  external int _unique_reserved_item_9;
  @ffi.Uint32()
  external int _unique_reserved_item_10;
  @ffi.Uint32()
  external int _unique_reserved_item_11;
  @ffi.Uint32()
  external int _unique_reserved_item_12;
  @ffi.Uint32()
  external int _unique_reserved_item_13;
  @ffi.Uint32()
  external int _unique_reserved_item_14;
  @ffi.Uint32()
  external int _unique_reserved_item_15;
  @ffi.Uint32()
  external int _unique_reserved_item_16;
  @ffi.Uint32()
  external int _unique_reserved_item_17;
  @ffi.Uint32()
  external int _unique_reserved_item_18;
  @ffi.Uint32()
  external int _unique_reserved_item_19;
  @ffi.Uint32()
  external int _unique_reserved_item_20;
  @ffi.Uint32()
  external int _unique_reserved_item_21;
  @ffi.Uint32()
  external int _unique_reserved_item_22;

  /// Helper for array `reserved`.
  ArrayHelper_fuse_conn_info_reserved_level0 get reserved =>
      ArrayHelper_fuse_conn_info_reserved_level0(this, [23], 0, 0);
}

/// Helper for array `reserved` in struct `fuse_conn_info`.
class ArrayHelper_fuse_conn_info_reserved_level0 {
  final fuse_conn_info _struct;
  final List<int> dimensions;
  final int level;
  final int _absoluteIndex;
  int get length => dimensions[level];
  ArrayHelper_fuse_conn_info_reserved_level0(
      this._struct, this.dimensions, this.level, this._absoluteIndex);
  void _checkBounds(int index) {
    if (index >= length || index < 0) {
      throw RangeError(
          'Dimension $level: index not in range 0..${length} exclusive.');
    }
  }
